# FIleEventsReporter

./: .env  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
FileEventsReporterDriver/: FileEventsReporterDriver.inf  FileEventsReporterDriver.sln  FileEventsReporterDriver.vcxproj  FileEventsReporterDriver.vcxproj.filters  minifilter.cpp
include/: CommandHelper.h  Constants.h  FilterLoader.h  StringValidationHelper.h
src/: FileEventsReporter.cpp  FilterLoader.cpp
